fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,61 +1,61 @@
 {
-  box-sizing: border-box;
+box-sizing: border-box;
 }
 
 body {
-  font-family: 'Roboto', serif;
-  line-height: 1.5;
-  color: black;
-  background-color: #999966;
+ font-family: '7CRoboto', serif;
+ line-height: 1.5;
+ color: black;
+ background-color: #999966;
 }
 
-.name a{
-  font-size: 1.25em;
-  margin: 0;
-  font-size: 25px;
-  text-align: center;
+.name a {
+ font-size: 1.25em;
+ margin: 0;
+ font-size: 25px;
+ text-align: center;
 }
 
-.main-nav li{
-  background: #fff;
-  margin: 5px;
-  list-style: none;
-  max-width: 90%;
+.main-nav li {
+ background: #fff;
+ margin: 5px;
+ list-style: none;
+ max-width: 90%;
 }
 
 .name a,.main-nav {
-  display: block;
-  text-align: center;
-  padding: 10px 1px;
-  text-decoration: none;
+ display: block;
+ text-align: center;
+ padding: 10px 1px;
+ text-decoration: none;
 }
 
 .main-nav a {
-  color: black;
-  text-transform: uppercase;
+ color: black ;
+ text-transform: uppercase;
 }
 
-.main-nav a:hover{
-  color: black;
+.main-nav a:hover {
+ color: black;
 }
 
-h3{
-  text-align: center;
+h2,h3 {
+ text-align: center;
 }
 
 p.introduction {
-  text-align: justify;
-  padding: 2%;
-  color: black;
+ text-align: justify;
+ padding: 2%;
+   color: black;
 }
 
 .portfolio {
-  background: #fff;
-  display: inline-block;
+ background: #fff;
+ display: inline-block;
 }
 
 .portfolio-title {
-  text-align: center;
+ text-align: center;
 }
 
 .p {
@@ -63,167 +63,166 @@ p.introduction {
 }
 
 p.contact {
-  text-align: center;
-  padding:10%;
+ text-align: justify;
+   padding:10%;
 }
 
 p.phone {
-  text-align: justify;
+ text-align: center;
 }
 
 p.e-mail {
-  text-align: justify;
+ text-align: center;
 }
 
 .student-picture {
-  display:block;
-  max width: 60%;
-  margin-left: auto;
-  margin-right: auto;
+ display: block;
+ max-width: 60%;
+ margin-left: auto;
+ margin-right: auto
 }
 
 img {
-  max width: 100%;
-  display: block;
-  margin-left: -20px;
+ max-width: 100%;
+ display: block;
+ margin-left: -20px
 }
 
 li {
-  list style: none;
+ list-style: none;
 }
 
-.line-seperator {
-  height: 1px;
-  border-bottom: 1px solid #c4c2c2;
+.line-separator {
+ height: 1px;
+ border-bottom: 1px solid #c4c2c2;
 }
 
 .studentname-footer {
-  display: inline-block;
-  float: right;
+ display: inline-block;
+ float: left;
 }
 
 .back-to-top {
-  display: inline-block;
-  float: right;
-  list-style: initial;
+ display: inline-block;
+ float: right;
+ list-style: none;
 }
 
 .footer-nav {
-  display: none;
+ display: none;
 }
 
 a:link {
-  text decoration: none;
-  font-size: 18px;
+	text-decoration: none;
+	font-size: 18px;
 }
 
 a:link {
-  color: black;
+	color: black;
 }
 
 a:visited {
-   color: white;
+	color: white;
 }
 
 a:active {
-  color: blue;
+	color: blue;
 }
 
 @media (min-width: 768px) {
-   body {
-   padding-top: 5px;
+	body {
+		padding-top: 5px;
 }
+	.main-nav {
+		text-align: center;
 
-.main-nav {
-  text-align: center;
 }
+	.main-nav li {
+		display: inline-block;
+		margin-right: 1%;
+		margin-left: 2%;
+		background: none;
 
-.main-nav li {
-  display: inline-block;
-  margin-right: : 1%;
-  margin-left: : 2%;
-  background: none;
 }
+	.student-picture {
+		float: right;
+		display: inline-block;
+		max-width: 35%;
+		margin-left: 10%;
+		margin-right: 6%;
 
-.student-picture {
-  float: right;
-  display: inline-block;
-  max width: 35%;
-  margin-left: 10%;
-  margin-right: 6%;
 }
-
-p.introduction {
-  float: left;
-  width: 47.5%;
+	p.introduction {
+		float: left;
+		width: 47.5%
 }
 
 ul.products li {
-  width: 49%;
-  display: inline-block;
-  vertical-align: top;
+	width: 49%;
+	display: inline-block;
+	vertical-align: top;
 }
 
 ul.products {
-  margin-left: 1%;
-  margin-right: auto;
+	margin-left: 1%;
+	margin-right: auto;
 }
 
 ul.footer-nav {
-  display: inline-block;
-  list-style-type: none;
-  float: right;
+	display: inline-block;
+	list-style-type: none;
+	float: right;
 }
 
 li {
-  display: inline;
-  padding-right: 20px;
+ display: inline;
+ padding-right: 20px;
 }
 
 .back-to-top {
-  display: none;
+	display: none;
 }
 
 @media (min-width: 1024px) {
 }
 .name {
-  float: left;
-  margin: 0 1%;
-  padding: 0 2px;
+	float: left;
+	margin: 0 1%;
+	padding: 0 2px;
 }
 
 .main-nav {
-  display: inline-block;
-  float: right;
-  min-width: 350%;
+	display: inline-block;
+	float: right;
+	min-width: 350px;
 }
 
 .profile {
-  margin-top: 100px;
+	margin-top: 100px;
 }
 
 .student-picture {
-  float: right;
+	float: right;
   padding: 2em;
 }
 
 p.introduction {
-  float: left;
-  font-size: 17px;
-  text-align: justify;
+ float: left;
+ font-size:17px;
+ text-align:justify;
 }
 
 ul.products li {
-  width: 33%;
-  display: inline-block;
-  vertical-align: top;
+ width: 33%;
+ display: inline-block;
+ vertical-align: top;
 }
 
 ul.products {
-  margin-left: 1%;
-  margin-right: auto;
+	margin-left: 1%;
+	margin-right: auto;
 }
 
 p {
-  text-align: justify;
+text-align: justify;
 }
